# ci-health

./: .bazelrc  .coderabbit.yaml  .gitignore  .golangci.yml  AGENTS.md  BUILD.bazel  OWNERS  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  sample-query.txt
.circleci/: config.yml
.claude/skills/analyze-build/: SKILL.md
.claude/skills/analyze-ci-failures/: SKILL.md
.claude/skills/analyze-pr-builds/: SKILL.md
.claude/skills/change-relevance/: SKILL.md
.claude/skills/flake-overview/: SKILL.md
.claude/skills/lane-failure-rate/: SKILL.md
.claude/skills/test-failure-rate/: SKILL.md
.claude/skills/trigger-pr-jobs/: SKILL.md
.gemini/skills/analyze-build/: SKILL.md
.gemini/skills/analyze-ci-failures/: SKILL.md
.gemini/skills/analyze-pr-builds/: SKILL.md
.gemini/skills/change-relevance/: SKILL.md
.gemini/skills/flake-overview/: SKILL.md
.gemini/skills/lane-failure-rate/: SKILL.md
.gemini/skills/test-failure-rate/: SKILL.md
.gemini/skills/trigger-pr-jobs/: SKILL.md
.github/workflows/: badge-update.yaml  badges-update.yaml  batch-update.yaml  ci-failures.yml  ci-health-tests.yaml  historical-update.yaml  output-update.yaml  test.yaml
ai/: explain-ci-failures.md  explain-sig-failures.md
ai/docs/: branch-strategy.md  prow-job-naming-conventions-and-branching-strategy.md  sigs.md  testgrid.md
badges/kubevirt/kubevirt/: results.json
cmd/: BUILD.bazel  main.go
cmd/batch/: BUILD.bazel  main.go
cmd/ci-failures/: README.md  ci-failures.gomd  main.go  types.go
cmd/cost/: main.go
cmd/html-report/: main.go
cmd/start/: BUILD.bazel
cmd/stats/: BUILD.bazel  main.go
docs/: skills-overview.md
e2e/: BUILD.bazel  tests_suite_test.go
hack/: README.md  download-build-logs.sh  extract-errors.sh  run-gemini-image.sh  run-gemini.sh  show-ci-failure-jobs.sh  sig-failure-rate-average.sh
output/: metrics
output/ci-failures/: summary.md
output/kubevirt/kubevirt/: metrics  results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2019-05-13/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2019-07-29/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2019-08-05/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2019-09-09/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2019-11-11/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2019-11-18/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2019-12-16/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2020-02-10/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2020-02-17/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2020-06-01/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2020-06-22/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2020-07-20/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2020-08-03/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2020-09-28/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2020-11-16/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2021-04-12/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2021-04-26/: results.json
output/kubevirt/kubevirt/batch/data/retests-to-merge/2021-05-10/: results.json
output/kubevirt/kubevirt/batch/merge-queue-length/data/2019-05-06T00:00:00Z/: results.json
output/kubevirt/kubevirt/batch/merge-queue-length/data/2019-05-13T00:00:00Z/: results.json
output/kubevirt/kubevirt/batch/merge-queue-length/data/2019-05-20T00:00:00Z/: results.json
output/kubevirt/kubevirt/batch/merge-queue-length/data/2019-05-27T00:00:00Z/: results.json
output/kubevirt/kubevirt/batch/merge-queue-length/data/2019-06-03T00:00:00Z/: results.json
output/kubevirt/kubevirt/batch/merge-queue-length/data/2019-06-10T00:00:00Z/: results.json
output/kubevirt/kubevirt/ci-failures/: summary.md
output/kubevirt/kubevirt/flake-overview/: flake-overview-2026-05-15.md  flake-overview-2026-05-20.md  flake-overview-2026-05-27.md  flake-overview-2026-06-02.md  flake-overview-2026-06-05.md  flake-overview-2026-06-08.md  flake-overview-2026-06-10.md  flake-overview-2026-06-22.md  flake-overview-2026-06-24.md  flake-overview-2026-06-29.md
output/sig-failures/: summary.md
pkg/chatops/: BUILD.bazel  chatops_test.go  main.go
pkg/ci-failures/: analyze.go  categorize.go  categorize_test.go  change_relevance.go  change_relevance_test.go  cluster.go  discover_lanes.go  flake_overview.go  flake_overview_test.go  k8s_analyze.go  k8s_analyze_test.go  k8s_detectors.go  k8s_detectors_test.go  k8s_types.go  lane_rate.go  lane_rate_test.go  log_grep_stats.go  log_grep_stats_test.go  main.go  summarize.go  test_rate.go  test_rate_test.go  types.go
pkg/constants/: BUILD.bazel  main.go
pkg/cost/: calculator.go  calculator_test.go  cost-report.gohtml  handler.go  prometheus.go  prometheus_test.go  report.go  types.go
pkg/gh/: BUILD.bazel  gh_test.go  main.go  types.go
pkg/ghclient/: BUILD.bazel  main.go
pkg/htmlreport/: main.go  sig-failure-report.gohtml
pkg/mergequeue/: BUILD.bazel  doc.go  main.go  mergequeue_test.go
pkg/metrics/: BUILD.bazel  metrics.go  metrics_test.go
pkg/output/: BUILD.bazel  badge.go  file.go  output.go  output_test.go  types.go
pkg/plot/: BUILD.bazel  main.go
pkg/prow/: types.go  types_test.go
pkg/prow/testdata/: finished.json  started.json
pkg/quarantine/: main.go
pkg/runner/: BUILD.bazel  batch.go  runner.go
pkg/server/: BUILD.bazel  server.go  server_test.go
pkg/sigretests/: BUILD.bazel  main.go  main_test.go
pkg/sigretests/testdata/: pr-history-16831.html  pr-history-no-commits.html
pkg/stats/: BUILD.bazel  runner.go  stats.go  stats_test.go  types.go
pkg/timeutils/: BUILD.bazel  main.go  timeutils_test.go
pkg/types/: BUILD.bazel  main.go
run-gemini/: Containerfile  settings.json
tests/: BUILD.bazel  tests_suite_test.go
(+1655 files in other folders)
