load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "batch_lib",
    srcs = ["main.go"],
    importpath = "github.com/fgimenez/ci-health/cmd/batch",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/constants",
        "//pkg/runner",
        "//pkg/types",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "batch",
    embed = [":batch_lib"],
    visibility = ["//visibility:public"],
)
