load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "start_lib",
    srcs = ["main.go"],
    importpath = "github.com/fgimenez/cihealth/cmd/start",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "start",
    embed = [":start_lib"],
    visibility = ["//visibility:public"],
)
