load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stats_lib",
    srcs = ["main.go"],
    importpath = "github.com/fgimenez/ci-health/cmd/stats",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/runner",
        "//pkg/types",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "stats",
    embed = [":stats_lib"],
    visibility = ["//visibility:public"],
)
