load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gh",
    srcs = ["main.go"],
    importpath = "github.com/fgimenez/ci-health/pkg/gh",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/constants",
        "//pkg/types",
        "@com_github_shurcool_githubv4//:githubv4",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
