load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "output",
    srcs = ["output.go"],
    importpath = "github.com/kubevirt/ci-health/pkg/output",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/constants",
        "//pkg/metrics",
        "//pkg/types",
        "@com_github_narqo_go_badge//:go-badge",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "output_test",
    srcs = ["output_test.go"],
    deps = [
        ":output",
        "@com_github_narqo_go_badge//:go-badge",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_ginkgo//extensions/table",
        "@com_github_onsi_gomega//:gomega",
    ],
)
