load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/fgimenez/ci-health/pkg/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gh",
        "//pkg/mergequeue",
        "//pkg/metrics",
        "//pkg/output",
        "//pkg/stats",
        "//pkg/types",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
