load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/fgimenez/cihealth/pkg/server",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus/promhttp"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server"],
    deps = [
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
