load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sigretests",
    srcs = ["main.go"],
    importpath = "github.com/kubevirt/ci-health/pkg/sigretests",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_avast_retry_go//:retry-go",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_net//html",
    ],
)
