load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stats",
    srcs = [
        "stats.go",
        "types.go",
    ],
    importpath = "github.com/fgimenez/ci-health/pkg/stats",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/constants",
        "//pkg/gh",
    ],
)
