load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stats",
    srcs = ["stats.go"],
    importpath = "github.com/kubevirt/ci-health/pkg/stats",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/chatops",
        "//pkg/constants",
        "//pkg/mergequeue",
        "//pkg/sigretests",
        "//pkg/types",
    ],
)

go_test(
    name = "stats_test",
    srcs = ["stats_test.go"],
    deps = [
        ":stats",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_ginkgo//extensions/table",
        "@com_github_onsi_gomega//:gomega",
    ],
)
